--- a/css/style.css
+++ b/css/style.css
@@ -178,10 +178,7 @@ textarea {
   color: #fff;
   background: linear-gradient(to right, var(--dark),var(--dark)), url(../../assets/svg/common-bg.svg);
   background-position: center;
-  height: 100vh;
-  min-height: 80rem;
-  max-height: 120rem;
-  position: relative; }
+   }
   @media only screen and (max-width: 37.5em) {
     .home-hero {
       height: unset;
