Added: link to GitHub repo in each project

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 a {
   text-decoration: none;
   color: inherit; }
-
+ 
 li {
   list-style: none; }
 
@@ -126,6 +126,13 @@ textarea {
   margin: auto;
   width: 92%; }
 
+.container__app-links {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+}
+
 .btn {
   background: #fff;
   color: #333;
@@ -138,6 +145,12 @@ textarea {
   transition: transform .3s; }
   .btn:hover {
     transform: translateY(-3px); }
+  .btn--icon {
+    display: flex;
+    align-items: center;
+    padding: 1.2rem 1.2rem;
+    background: #323233;
+  }
   .btn--bg {
     padding: 1.5rem 8rem;
     font-size: 2rem; }
@@ -147,6 +160,7 @@ textarea {
   .btn--theme {
     background: #0062b9;
     color: #fff; }
+
   .btn--theme-inv {
     color: #0062b9;
     background: #fff;
